--- a/application/modules/catalog/views/scripts/search/index.phtml
+++ b/application/modules/catalog/views/scripts/search/index.phtml
@@ -16,6 +16,8 @@
     </ul>
 </div>
 <div class="yandex_direct in_search_result"><?=$this->yandex_direct?></div>
+<div>
+</div>
 <div id="div_context2">
 <?if($this->data) foreach ($this->data as $arStore): ?>
 <!-- ЗАГОЛОВОК ОРГАНИЗАЦИИ - начало -->
