--- a/application/modules/test/views/scripts/index/demo.phtml
+++ b/application/modules/test/views/scripts/index/demo.phtml
@@ -1,53 +1,4 @@
-<br /><br />
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script>!window.jQuery && document.write('<script src="//yandex.st/jquery/1.9.0/jquery.min.js"><\/script>')</script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
-<script>!window.jQuery.datepicker && document.write('<script src="//yandex.st/jquery-ui/1.10.0/jquery-ui.min.js"><\/script>')</script>
-<script>
-    function scroll_main(){
-        var $tbedit = $('#test_tbedit');
-        $('#test_head').scrollLeft($tbedit.scrollLeft());
-        var $h = $tbedit.height();
-    }
-</script>
-<div id="view-content">
-        <div>
-        <?= $this->tbEdit->getTableTitle() ?>
-        </div>
-    <div id="test_head"  style="max-width: 600px; overflow-x: hidden; overflow-y: hidden;">
-        <table border="1px" cellpadding="5px" cellspacing="0px">
-            <thead>
-                <?foreach($this->tbEdit->getFields() as $field) if($field['isVisible']=='1'):?>
-                <?='<th style="min-width:'.$field['width'].';">'?>
-                    <?=$field['title']?>
-                </th>
-                <?endif;?>
-            </thead>
-        </table>
-    </div>
-    <div id="test_tbedit"  style="max-width: 600px; height:500px; overflow-x: auto; overflow-y: auto;" onscroll="scroll_main()">
-            <table cellpadding="5px" cellspacing="0px">
-                <tbody>
-                    <?foreach($this->tbEdit->getTableData(1) as $row):?>
-                    <tr>
-                        <?$this->recCount = $row['str_cnt'];?>
-                        <?foreach($this->tbEdit->getFields() as $field) if($field['isVisible']=='1'):?>
-                        <?='<td style="border-bottom: 1px solid black; min-width:'.$field['width'].';">'?>
-                            <?=$row[$field['name']]?>
-                        </td>
-                        <?endif;?>
-                    </tr>
-                    <?endforeach;?>
-                </tbody>
-            </table>
-    </div>
-    <div id="test_foot"  style="max-width: 600px; overflow-x: hidden; overflow-y: hidden;">
-        <table cellpadding="5px" cellspacing="0px">
-            <thead>
-                <th>
-                    <?='Всего записей - '.$this->recCount?>
-                </th>
-            </thead>
-        </table>
-    </div>
+<div>
+    <p>Demo view</p>
+    <?= $this->action('index', 'editor', 'editor', array('name' => 'test'))?>
 </div>
