--- a/application/modules/editor/views/scripts/editor/add.phtml
+++ b/application/modules/editor/views/scripts/editor/add.phtml
@@ -1,13 +1,11 @@
-                <tbody>
-                    <?//foreach($this->tbEdit->getTableData() as $row):?>
+                    <?foreach($this->tbEdit->getTableData() as $row):?>
                     <tr>
-                        <td> столбец
-                        <?//$this->recCount = $row['str_cnt'];?>
-                        <?//foreach($this->tbEdit->getFields() as $field) if($field['isVisible']=='1'):?>
-                        <?//='<td style="border-bottom: 1px solid black; min-width:'.$field['width'].';">'?>
-                            <?//=$row[$field['name']]?>
+                        <td>
+                        <?$this->recCount = $row['str_cnt'];?>
+                        <?foreach($this->tbEdit->getFields() as $field) if($field['isVisible']=='1'):?>
+                        <?='<td style="border-bottom: 1px solid black; min-width:'.$field['width'].';">'?>
+                            <?=$row[$field['name']]?>
                         </td>
-                        <?//endif;?>
+                        <?endif;?>
                     </tr>
-                    <?//endforeach;?>
-                </tbody>
+                    <?endforeach;?>
