--- a/application/modules/test/views/scripts/index/demo.phtml
+++ b/application/modules/test/views/scripts/index/demo.phtml
@@ -1,4 +1,4 @@
 <div>
     <p>Demo view</p>
-    <?= $this->action('index', 'editor', 'editor', array('name' => 'test'))?>
+    <?= $this->action('index', 'editor', 'editor', array('elName' => 'test', 'uid' => $this->tbEdit->getUID(), 'connName' => $this->tbEdit->getConnName()))?>
 </div>
